# maquinas-fluxo

./: README.md  main.py  pyproject.toml
resources/: energias_vazao_rendimentos_resource.py  velocidades_angulos_resource.py
services/: energias_vazao_rendimentos.py  velocidades_angulos.py
