[tool.poetry]
name = "maquinas-fluxo"
version = "0.1.0"
description = ""
authors = ["Lucas Moura de Almeida <lucas.moura020@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
polars = "^1.14.0"
pydantic = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

